--- a/examen-practico.ipynb
+++ b/examen-practico.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>real_text</th>\n      <th>text</th>\n      <th>favorite_count</th>\n      <th>ASocial</th>\n      <th>entities</th>\n      <th>fecha</th>\n      <th>RTids</th>\n      <th>coordinates</th>\n      <th>id_str</th>\n      <th>borrado</th>\n      <th>...</th>\n      <th>user</th>\n      <th>possibly_sensitive</th>\n      <th>real_entities</th>\n      <th>tendencia</th>\n      <th>display_text_range</th>\n      <th>quoted_status_permalink</th>\n      <th>quoted_status_id</th>\n      <th>quoted_status</th>\n      <th>quoted_status_id_str</th>\n      <th>extended_entities</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Los habitantes de la Ciudad de #México se gast...</td>\n      <td>Los habitantes de la Ciudad de #México se gast...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>{'user_mentions': [], 'symbols': [], 'hashtags...</td>\n      <td>28/02/2019 00:00:00</td>\n      <td>[]</td>\n      <td>NaN</td>\n      <td>1101000293691490304</td>\n      <td>0</td>\n      <td>...</td>\n      <td>{'follow_request_sent': None, 'profile_use_bac...</td>\n      <td>0.0</td>\n      <td>{'user_mentions': [{'id': 1041201283, 'indices...</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>@foxxx_76 @lopezdoriga @Televisa @EPN ¡Eres ta...</td>\n      <td>@foxxx_76 @lopezdoriga @Televisa @EPN ¡Eres ta...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>{'user_mentions': [{'id': 289590001, 'indices'...</td>\n      <td>28/02/2019 00:00:01</td>\n      <td>[]</td>\n      <td>NaN</td>\n      <td>1101000296195674112</td>\n      <td>0</td>\n      <td>...</td>\n      <td>{'follow_request_sent': None, 'profile_use_bac...</td>\n      <td>NaN</td>\n      <td>{'user_mentions': [{'id': 289590001, 'indices'...</td>\n      <td>0</td>\n      <td>[38, 140]</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>RT Es Oficial: Ya el unico camino que queda pa...</td>\n      <td>RT @pocopelo23: Es Oficial: Ya el unico camino...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>{'user_mentions': [{'id': 743586934082011136, ...</td>\n      <td>28/02/2019 13:17:37</td>\n      <td>[]</td>\n      <td>NaN</td>\n      <td>1101199742149644288</td>\n      <td>0</td>\n      <td>...</td>\n      <td>{'follow_request_sent': None, 'profile_use_bac...</td>\n      <td>NaN</td>\n      <td>{'user_mentions': [], 'symbols': [], 'hashtags...</td>\n      <td>2</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Yo creo que tiene el 100 % de aceptación🤨ya to...</td>\n      <td>Yo creo que tiene el 100 % de aceptación🤨ya to...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>{'user_mentions': [], 'symbols': [], 'hashtags...</td>\n      <td>28/02/2019 13:17:38</td>\n      <td>[]</td>\n      <td>NaN</td>\n      <td>1101199744158846976</td>\n      <td>0</td>\n      <td>...</td>\n      <td>{'follow_request_sent': None, 'profile_use_bac...</td>\n      <td>NaN</td>\n      <td>{'user_mentions': [], 'symbols': [], 'hashtags...</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>{'url': 'https://t.co/AQgO0J2Kbx', 'expanded':...</td>\n      <td>1.101120e+18</td>\n      <td>{'quote_count': 77, 'contributors': None, 'tru...</td>\n      <td>1.101120e+18</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>RT Mapa de #México que muestra la distribución...</td>\n      <td>RT @conagua_clima: Mapa de #México que muestra...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>{'user_mentions': [{'id': 143499407, 'indices'...</td>\n      <td>28/02/2019 13:17:39</td>\n      <td>[]</td>\n      <td>NaN</td>\n      <td>1101199749687005184</td>\n      <td>0</td>\n      <td>...</td>\n      <td>{'follow_request_sent': None, 'profile_use_bac...</td>\n      <td>NaN</td>\n      <td>{'user_mentions': [], 'symbols': [], 'hashtags...</td>\n      <td>2</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 21 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 3
     }
    ],
    "source": [
@@ -1019,6 +1019,13 @@
     "lista_mencionados = list(mencionados.keys())\n",
     "lista_mencionados"
    ]
+  },
+  {
+   "source": [
+    "**Nota:** Tambien se puede usuar la columna entities de df para obtener esta información\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
