--- a/examen-practico.ipynb
+++ b/examen-practico.ipynb
@@ -1022,7 +1022,7 @@
   },
   {
    "source": [
-    "**Nota:** Tambien se puede usuar la columna entities de df para obtener esta información\n"
+    "**Nota:** Tambien se puede usuar la columna entities > 'user_mentions' de df para obtener esta información \n"
    ],
    "cell_type": "markdown",
    "metadata": {}
